--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     Practica UNED previo
 </p>
 <x3d width='800px' height='800px'>
-<scene><Viewpoint position="0.50000 0.50000 2.22418" orientation="0.00000 0.00000 0.00000 0.00000" 
-	zNear="0.68652" zFar="3.10824" centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
+<scene><Viewpoint position="0.50000 0.50000 2.22418" orientation="0.00000 0.00000 0.00000 0.00000" centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://github.com/aprado26/practica24/main/golden_column.x3d"> </inline>
 </scene>
 </x3d>
